--- a/SW5zdGFs.html
+++ b/SW5zdGFs.html
@@ -1,4 +1,4 @@
 <img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/kodish.png" height="256" width="256"> 
 <h1>Instalação de aplicativos android via rede ou Wifi</h1>
 <iframe src="https://archive.org/embed/instalacao_202112" width="560" height="384" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-<!img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/SW5zdGFs.png">
+<img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/like.png">
