--- a/SW5zdGFs.html
+++ b/SW5zdGFs.html
@@ -1,4 +1,9 @@
 <img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/kodish.png" height="256" width="256"> 
 <h1>Instalação de aplicativos android via rede ou Wifi</h1>
 <iframe src="https://archive.org/embed/instalacao_202112" width="560" height="384" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-<img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/like.png">
+
+<iframe src="http://www.facebook.com/plugins/like.php?href="https://kodishmediacenter.github.io/kodishweb/SW5zdGFs.html"&layout=standard&show_faces=false&width=450&action=like&colorscheme=light" 
+
+scrolling="no" frameborder="0" allowTransparency="true" 
+
+style="border:none; overflow:hidden; width:450px; height:30px"></iframe>
