--- a/SW5zdGFs.html
+++ b/SW5zdGFs.html
@@ -2,4 +2,4 @@
 <h1>Instalação de aplicativos android via rede ou Wifi</h1>
 <iframe src="https://archive.org/embed/instalacao_202112" width="560" height="384" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
 <br><br>
-<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fkodishmediacenter.github.io%2Fkodishweb%2FSW5zdGFs.html&width=450&layout=standard&action=like&size=small&share=true&height=35&appId=765923403617731" width="450" height="35" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+<a hfref="https://bit.ly/3IS8dB1"><img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/like.png"> Like</a>
