--- a/SW5zdGFs.html
+++ b/SW5zdGFs.html
@@ -2,4 +2,4 @@
 <h1>Instalação de aplicativos android via rede ou Wifi</h1>
 <iframe src="https://archive.org/embed/instalacao_202112" width="560" height="384" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
 <br><br>
-<a hfref="https://bit.ly/3IS8dB1"><img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/like.png"> Like</a>
+<a hfref="https://bit.ly/3IS8dB1"><img src="https://raw.githubusercontent.com/kodishmediacenter/kodishweb/gh-pages/like.png"></a>
