--- a/1/index.html
+++ b/1/index.html
@@ -19,7 +19,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=1;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "Planilha1";
+ c_rgszSh[0] = "Video";
 
 
 
@@ -317,7 +317,7 @@ function fnSetActiveSheet(iSh)
  <frame src="index_arquivos/tabstrip.html" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
-   <p>Esta p·gina usa quadros, mas o seu navegador n„o d· suporte para eles.</p>
+   <p>Esta p√°gina usa quadros, mas o seu navegador n√£o d√° suporte para eles.</p>
   </body>
  </noframes>
 </frameset>
