--- a/index2_arquivos/sheet001.html
+++ b/index2_arquivos/sheet001.html
@@ -2401,7 +2401,7 @@ ZHJzL19yZWxzL3BpY3R1cmV4bWwueG1sLnJlbHNQSwUGAAAAAAYABgCEAQAANXABAAAA
  </tr>
  <tr height=31 style='height:23.25pt'>
   <td height=31 style='height:23.25pt'></td>
-  <td class=xl66 colspan=8 style='mso-ignore:colspan'>Guia de Configuração
+  <td class=xl66 colspan=8 style='mso-ignore:colspan'>Guia de Configura&ccedil;&atildeo
   Proeletronics ProSB 2000</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
